--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
 #bars {
   background: #131313;
   /* width: 100vw; */
-  height: 90vh;
+  /* height: 90vh; */
   display: flex;
   align-items: flex-end;
   /* overflow: hidden; */
